# compact_enc_det

./: .gitignore  CMakeLists.txt  autogen.sh
compact_enc_det/: compact_enc_det.cc
